--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 
     {% include head.html %}
 
-    <body class="uk-background-primary uk-light">
+    <body class="uk-light">
 
     {% include header.html %}
 
