--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,16 +2,51 @@
 layout: default
 ---
 
+<script>
+  function filter(tag) {
+    setActiveTag(tag);
+    showContainer(tag);
+  }
+  function setActiveTag(id) {
+    // loop through all items and remove active class
+    var items = document.getElementsByClassName('uk-card-box');
+    for(var i=0; i < items.length; i++) {
+      items[i].classList.remove('active');
+      //items[i].classList.add('uk-card-default');
+    }
+    // set the selected id's item to active
+    var item = document.getElementById(id + '-card');
+    if(item) {
+      //item.classList.remove('uk-card-default');
+      item.classList.add('active');
+    }
+  }
+  function showContainer(id) {
+    // loop through all lists and hide them
+    var lists = document.getElementsByClassName('article');
+    for(var i=0; i < lists.length; i++) {
+      lists[i].classList.add('hidden');
+    }
+    // remove the hidden class from the list corresponding to the selected id
+    var list = document.getElementById(id + '-article');
+    //var section = document.getElementById('category-section');
+    if(list) {
+      //section.classList.remove('hidden');
+      list.classList.remove('hidden');
+    }
+  }
+</script>
+
 <section class="tm-margin-large-top">
     <div class="uk-container uk-text-center">
 
-        {% if page.hero.subtitle %}<p class="uk-margin-remove-bottom tm-overtitle uk-margin-top uk-text-uppercase letter-spacing-l">{{ page.hero.subtitle }}</p>{% endif %}
-        <h1 class="uk-margin-small-top uk-heading-hero">{{ page.hero.title }}</h1>
+        {% if page.hero.subtitle %}<p class="uk-margin-remove-bottom tm-overtitle uk-margin-top uk-text-uppercase letter-spacing-l text-shadow" data-uk-scrollspy="cls: uk-animation-slide-bottom; delay: 100">{{ page.hero.subtitle }}</p>{% endif %}
+        <h1 class="uk-margin-small-top uk-heading-hero text-shadow" data-uk-scrollspy="cls: uk-animation-slide-bottom; delay: 200">{{ page.hero.title }}</h1>
 
-        <div class="uk-grid-medium uk-child-width-1-3@m uk-grid-small uk-grid-match tm-margin-large-top uk-text-center" data-uk-grid>
+        <div class="uk-grid-medium uk-child-width-1-2@s uk-child-width-1-3@m uk-grid-small uk-grid-match tm-margin-large-top uk-text-center" data-uk-grid data-uk-scrollspy="cls: uk-animation-slide-bottom; delay: 300">
           {% for article in site.support %}
             <div>
-                <a href="{{ article.url }}" class="uk-card uk-card-box uk-card-body uk-border-rounded">
+                <a id="{{ article.title | slugify }}-card" href="#{{ article.title | slugify }}-article" class="uk-card uk-card-primary uk-card-hover uk-card-box uk-card-body uk-border-rounded" data-uk-scroll="duration: 400; offset: 150;"{% if page.filter %} onclick="filter('{{ article.title | slugify }}');"{% endif %}>
                     {% if article.icon %}<span class="uk-icon-forder uk-border-rounded"><span data-uk-icon="icon: {{ article.icon }}; ratio: 2"></span></span>{% endif %}
                     <p>{{ article.title }}</p>
                 </a>
@@ -23,14 +58,18 @@ layout: default
 </section>
 
 <section class="uk-margin-xlarge-top">
-    <div class="uk-container">
+    <div class="uk-container uk-container-small">
 
-        <h2 class="uk-margin-medium-bottom">Most Popular Questions<a href="#" data-uk-totop data-uk-scroll class="uk-float-right uk-margin-small-top"></a></h2>
-        <hr class="uk-margin-remove">
-        {% for article in site.support limit:1 %}
-          <div class="home-content">
+        {% for article in site.support %}
+
+          <article id="{{ article.title | slugify }}-article" class="article article-support">
+
+            <h1 class="uk-margin-medium-bottom text-shadow">{{ article.title }}<a href="#" data-uk-totop data-uk-scroll class="uk-float-right uk-margin-small-top"></a></h1>
+            <hr class="article-support-rule">
+
             {{ article.content }}
-          </div>
+          </article>
+
         {% endfor %}
 
     </div>
