--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,11 +3,11 @@ layout: default
 ---
 
 <div class="uk-section">
-    <div class="uk-container uk-container-xsmall">
+    <div class="uk-container uk-container-small">
 
         <article class="uk-article">
 
-            <h1 class="uk-article-title">{{ page.title | escape }}</h1>
+            <h1 class="uk-heading-hero uk-text-center text-shadow">{{ page.title | escape }}</h1>
 
             <div class="article-content">
                 {{ content }}
