--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="uk-section">
-    <div class="uk-container uk-container-xsmall">
+    <div class="uk-container uk-container-small">
         <article class="uk-article">
 
             <h1 class="uk-article-title">{{ page.title | escape }}</h1>
