--- a/_layouts/changelog.html
+++ b/_layouts/changelog.html
@@ -3,11 +3,11 @@ layout: default
 ---
 
 <div class="uk-section">
-    <div class="uk-container uk-container-xsmall">
+    <div class="uk-container uk-container-small">
 
         <article class="uk-article">
 
-            <h1 class="uk-article-title">{{ page.title | escape }}</h1>
+            <h1 class="uk-heading-hero uk-text-center text-shadow">{{ page.title | escape }}</h1>
 
             <div class="article-content">
                 {{ content }}
@@ -15,7 +15,7 @@ layout: default
 
             <div class="tm-timeline uk-margin-large-top">
                 {% for version in site.data.changelog %}
-                <div class="tm-timeline-entry">
+                <div class="tm-timeline-entry uk-margin-xlarge-top">
                     <div class="tm-timeline-time">
                         <h5>{{ version.date }}</h5>
                     </div>
