--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
 
     {{ content }}
 
-    {% include offcanvas.html %}
+    {% include mobile.html %}
 
     {% if page.layout != 'doc' %}
         {% include footer.html %}
