--- a/_sass/theme/uikit.scss
+++ b/_sass/theme/uikit.scss
@@ -52,7 +52,7 @@
 // @import "../uikit/components/accordion.scss";
 @import "../uikit/components/drop.scss"; // After: Card
 @import "../uikit/components/dropdown.scss"; // After: Card
-// @import "../uikit/components/modal.scss"; // After: Close
+@import "../uikit/components/modal.scss"; // After: Close
 @import "../uikit/components/lightbox.scss"; // After: Close
 @import "../uikit/components/slideshow.scss";
 @import "../uikit/components/sticky.scss";
