--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -40,7 +40,7 @@ layout: default
 <section class="tm-margin-large-top">
     <div class="uk-container uk-text-center">
 
-        {% if page.hero.subtitle %}<p class="uk-margin-remove-bottom tm-overtitle uk-margin-top uk-text-uppercase letter-spacing-l text-shadow" data-uk-scrollspy="cls: uk-animation-slide-bottom; delay: 100">{{ page.hero.subtitle }}</p>{% endif %}
+        {% if page.hero.subtitle %}<p class="uk-margin-remove-bottom tm-overtitle uk-margin-top uk-text-uppercase letter-spacing-l text-shadow uk-text-muted" data-uk-scrollspy="cls: uk-animation-slide-bottom; delay: 100">{{ page.hero.subtitle }}</p>{% endif %}
         <h1 class="uk-margin-small-top uk-heading-hero text-shadow" data-uk-scrollspy="cls: uk-animation-slide-bottom; delay: 200">{{ page.hero.title }}</h1>
 
         <div class="uk-grid-medium uk-child-width-1-2@s uk-child-width-1-3@m uk-grid-small uk-grid-match tm-margin-large-top uk-text-center" data-uk-grid data-uk-scrollspy="cls: uk-animation-slide-bottom; delay: 300">
@@ -67,7 +67,8 @@ layout: default
             <h1 class="uk-margin-medium-bottom text-shadow">{{ article.title }}<a href="#" data-uk-totop data-uk-scroll class="uk-float-right uk-margin-small-top"></a></h1>
             <hr class="article-support-rule">
 
-            {{ article.content }}
+            <div class="article-content">{{ article.content }}</div>
+
           </article>
 
         {% endfor %}
