--- a/_includes/cta.html
+++ b/_includes/cta.html
@@ -1,7 +1,7 @@
 <div class="uk-margin-large-top">
     <div class="uk-container">
         <hr class="uk-margin-remove">
-        <div class="uk-grid-large uk-flex-middle uk-margin-xlarge-top uk-margin-xlarge-bottom" data-uk-grid data-uk-scrollspy="cls: uk-animation-slide-bottom; repeat: true; delay: 100">
+        <div class="uk-grid-large uk-flex-middle uk-margin-xlarge-top" data-uk-grid data-uk-scrollspy="cls: uk-animation-slide-bottom; repeat: true">
             <div class="uk-width-auto@m">
                 <p class="uk-text-large">{{ page.cta.title }}</p>
             </div>
