--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="uk-section uk-text-center uk-text-muted uk-link-muted tm-primary-color-dark">
+<footer class="uk-section uk-text-center uk-text-muted uk-link-muted tm-primary-color-dark uk-margin-xlarge-top">
     <div class="uk-container uk-container-small">
 
         <div>
