--- a/_includes/map.html
+++ b/_includes/map.html
@@ -1,4 +1,4 @@
-<div id="map" class="uk-width-1-1 uk-height-large uk-margin-medium-top uk-margin-medium-bottom"></div>
+<div id="map" class="uk-width-1-1 uk-height-large uk-margin-large-top"></div>
 <script>
   window.mapData = {"latitude": {{ include.latitude }},"longitude": {{ include.longitude }}, "zoom": {{ include.zoom}}};
 
