--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -28,7 +28,7 @@
 
         <div class="uk-navbar-right">
 
-          <a class="uk-navbar-toggle uk-hidden@m-" href="#mobile" data-uk-toggle>
+          <a class="uk-navbar-toggle uk-hidden@m" href="#mobile" data-uk-toggle>
               <span data-uk-navbar-toggle-icon></span> <span class="uk-margin-small-left">Menu</span>
           </a>
 
