--- a/_includes/formspree.html
+++ b/_includes/formspree.html
@@ -1,5 +1,5 @@
 {% if include.email %}
-  <form class="uk-form-stacked uk-margin-medium-top" method="POST" action="https://formspree.io/{{ include.email }}" accept-charset="UTF-8">
+  <form class="uk-form-stacked uk-margin-large-top" method="POST" action="https://formspree.io/{{ include.email }}" accept-charset="UTF-8">
       <div class="uk-margin-medium-bottom">
           <label class="uk-form-label uk-margin-small-bottom" for="form-stacked-text">Name</label>
           <div class="uk-form-controls">
@@ -24,12 +24,12 @@
               <textarea class="uk-textarea uk-form-large" name="message" rows="5" minlength="10" required></textarea>
           </div>
       </div>
-      <div>
+      <div class="uk-text-center">
           {% if include.redirect %}
           <input type="hidden" name="_next" value="{{ include.redirect | absolute_url }}">
           {% endif %}
           <input type="text" name="_gotcha" style="display:none">
-          <input class="uk-button uk-button-primary uk-button-large uk-width-1-1 uk-border-rounded" type="submit" value="Send">
+          <input class="tm-button tm-button-xlarge" type="submit" value="Send">
       </div>
   </form>
 {% endif %}
