--- a/_layouts/faq.html
+++ b/_layouts/faq.html
@@ -10,7 +10,7 @@ layout: default
       <div>
         <ul class="uk-list uk-list-large">
           {% for article in site.faqs %}
-            <li><a href="#{{ article.title | slugify }}" data-uk-scroll="duration: 400; offset: 140" class="hvr-forward"><span data-uk-icon="icon: arrow-right"></span> {{ article.title }}</a></li>
+            <li><a href="#{{ article.title | slugify }}" data-uk-scroll="duration: 400; offset: 140" class="hvr-forward">{{ article.title }}</a></li>
           {% endfor %}
         </ul>
       </div>
@@ -18,13 +18,13 @@ layout: default
 
     <hr class="uk-margin-large-top uk-margin-remove-bottom">
   </div>
-  <div class="uk-container uk-container-small">
+  <div class="uk-container container-medium">
 
     {% for article in site.faqs %}
 
       <article id="{{ article.title | slugify }}" class="article uk-article uk-margin-xlarge-top">
-        <h2 class="uk-article-title uk-margin-medium-bottom">{{ article.title }}<a href="#" data-uk-totop data-uk-scroll="duration: 400" class="tm-totop uk-float-right uk-margin-small-top"></a></h2>
-        {{ article.content }}
+        <h2 class="article-faq-title uk-margin-medium-bottom">{{ article.title }}<a href="#" data-uk-totop data-uk-scroll="duration: 400" class="tm-totop uk-float-right"></a></h2>
+        <div class="article-content">{{ article.content }}</div>
       </article>
 
     {% endfor %}
