--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -57,14 +57,14 @@ layout: default
     </div>
 </section>
 
-<section class="uk-margin-xlarge-top">
+<section>
     <div class="uk-container uk-container-small">
 
         {% for article in site.support %}
 
           <article id="{{ article.title | slugify }}-article" class="article article-support">
 
-            <h1 class="uk-margin-medium-bottom text-shadow">{{ article.title }}<a href="#" data-uk-totop data-uk-scroll class="uk-float-right uk-margin-small-top"></a></h1>
+            <h1 class="uk-margin-medium-bottom text-shadow">{{ article.title }}<a href="#" data-uk-totop data-uk-scroll class="uk-float-right"></a></h1>
             <hr class="article-support-rule">
 
             <div class="article-content">{{ article.content }}</div>
