--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,12 +2,12 @@
 layout: default
 ---
 
-<div class="uk-section">
+<section class="tm-margin-large-top">
     <div class="uk-container uk-container-small">
 
         <article class="uk-article">
 
-            <h1 class="uk-heading-hero uk-text-center text-shadow">{{ page.title | escape }}</h1>
+            <h1 class="uk-heading-hero uk-margin-medium-bottom uk-text-center text-shadow">{{ page.title | escape }}</h1>
 
             <div class="article-content">
                 {{ content }}
@@ -16,4 +16,4 @@ layout: default
         </article>
 
     </div>
-</div>
+</section>
