--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 ---
-
-<div class="uk-section">
+            
+<section class="tm-margin-large-top">
     <div class="uk-container uk-container-small">
         <article class="uk-article">
 
@@ -12,7 +12,7 @@ layout: default
                 {% include post-meta.html %}
             </div>
 
-            <div class="uk-article-content">
+            <div class="article-content">
                 {{ content }}
                 {% include share.html %}
             </div>
@@ -33,4 +33,4 @@ layout: default
         </script>
 
     </div>
-</div>
+</section>
