--- a/_sass/theme/mixins.scss
+++ b/_sass/theme/mixins.scss
@@ -159,61 +159,68 @@
 //     }
 // }
 //
-// @mixin hook-article(){
-//     .share {
-//     }
-//     figure, .uk-slideshow {
-//         margin-top: $global-medium-margin * 1.1;
-//         margin-bottom: $global-medium-margin * 1.5;
-//     }
-//     figure {
-//         img + div .uk-overlay-icon {
-//             color: rgba(255, 255, 255, 0);
-//         }
-//         img:hover + div .uk-overlay-icon {
-//             color: rgba(255, 255, 255, 1);
-//         }
-//         figcaption {
-//             margin-left: 0;
-//             span {
-//                 padding-right: 20px;
-//                 margin-bottom: -43px;
-//                 margin-top: 20px;
-//                 border-right: solid 2px $global-muted-color;
-//                 font-style: italic;
-//                 font-size: 0.8rem;
-//                 line-height: 1.8;
-//             }
-//         }
-//     }
-//     blockquote {
-//         border-left: solid 2px $global-muted-color;
-//         padding-left: $base-margin-vertical;
-//         line-height: 1.7;
-//         margin-top: $global-medium-margin;
-//         margin-bottom: $global-medium-margin;
-//     }
-//     .highlight,
-//     .highlighter-rouge {
-//         margin-top: $global-medium-margin;
-//         margin-bottom: $global-medium-margin;
-//     }
-// }
+.button-primary {
+  background: $tm-primary-color-dark;
+  &:hover {
+    background: $tm-primary-color-xdark;
+  }
+}
+.article-content {
+    .share {
+    }
+    figure, .uk-slideshow {
+        margin-top: $global-medium-margin * 1.1;
+        margin-bottom: $global-medium-margin * 1.5;
+    }
+    figure {
+        img + div .uk-overlay-icon {
+            color: rgba(255, 255, 255, 0);
+        }
+        img:hover + div .uk-overlay-icon {
+            color: rgba(255, 255, 255, 1);
+        }
+        figcaption {
+            margin-left: 0;
+            span {
+                padding-right: 20px;
+                margin-bottom: -43px;
+                margin-top: 20px;
+                border-right: solid 2px $inverse-global-muted-color;
+                font-style: italic;
+                font-size: 0.8rem;
+                line-height: 1.8;
+            }
+        }
+    }
+    blockquote {
+        border-left: solid 2px $inverse-global-muted-color;
+        padding-left: $base-margin-vertical;
+        line-height: 1.7;
+        margin-top: $global-medium-margin;
+        margin-bottom: $global-medium-margin;
+    }
+    .highlight,
+    .highlighter-rouge {
+        margin-top: $global-medium-margin;
+        margin-bottom: $global-medium-margin;
+    }
+}
 // @mixin hook-article-title(){
 //     margin-bottom: $global-margin;
 // }
-// @mixin hook-article-meta(){
-//     a {
-//         color: $article-meta-color;
-//         &:hover {
-//             color: $global-primary-background;
-//         }
-//     }
-//     .avatar {
-//         margin-right: 10px;
-//         float: left;
-//     }
-// }
+@mixin hook-article-meta(){
+    a {
+        color: $article-meta-color;
+        &:hover {
+            color: $global-primary-background;
+        }
+    }
+    .avatar {
+        margin-right: 10px;
+        float: left;
+        border-radius: 50%;
+    }
+}
 @mixin hook-article-misc(){
     .article-content {
         line-height: 2;
@@ -222,9 +229,9 @@
     // .avatar {
     //     border-radius: 50%;
     // }
-    // .paginate-post .uk-text-small {
-    //     line-height: 1.75;
-    // }
+  .paginate-post .uk-text-small {
+      line-height: 1.8;
+  }
 }
 //
 // //
@@ -329,9 +336,9 @@
         list-style: none;
         margin: 0 0 $global-xlarge-margin 0;
         > li {
-          margin-top: $list-large-margin-top;
+          margin-top: $list-large-margin-top / 2;
         }
-        > li > :first-child {
+        > li:first-child {
             margin-top: 0;
         }
         >li:nth-child(n+2), >li>ul {
@@ -351,10 +358,10 @@
               -webkit-transform: translateX(6px);
               transform: translateX(6px);
           }
-          &:before {
-            content: '\2192';
-            margin-right: 10px;
-          }
+          // &:before {
+          //   content: '\2192';
+          //   margin-right: 10px;
+          // }
 
         }
 
@@ -485,38 +492,57 @@
 //         }
 //     }
 // }
-.article + .article {
+.tm-faq .container-medium {
+  max-width: 900px;
+}
+.article-support {
   margin-top: $global-xlarge-margin;
+  .uk-totop {
+      margin-top: 15px;
+  }
 }
-.article-support > h1 {
-  font-size: 2.6rem;
-}
+// .article-support > h1 {
+//   font-size: 2.6rem;
+// }
 .article-support .article-content {
   margin-top: $global-medium-margin;
-  > h2 {
+  > h2:not(:first-child) {
     margin-top: $global-xlarge-margin;
+  }
+  > h2 {
     margin-bottom: $global-medium-margin;
     font-weight: 200;
-    font-size: 2.2rem;
-    //letter-spacing: 1px;
   }
 }
 .article-support-rule {
   margin: 0;
-  + p {
-    //margin-top: $global-xlarge-margin;
+}
+.article-faq-title {
+  letter-spacing: 1px;
+  margin-right: 30px;
+  .tm-totop {
+      margin-right: -30px;
+      margin-top: 15px;
   }
 }
 .news {
   .uk-card {
     background: $tm-primary-color-light;
   }
+  .uk-card-header img {
+    border-radius: 50%;
+  }
+  .uk-card-title {
+    line-height: 1.2;
+  }
   .uk-card-body {
     padding-top: 10px;
     padding-bottom: 10px;
+    line-height: 1.6;
   }
   .uk-card-footer {
-    font-size: 0.875rem;
+    font-size: $global-small-font-size;
+    text-transform: uppercase;
   }
  }
 @mixin hook-base-pre(){
@@ -540,6 +566,9 @@
 @mixin hook-base-misc(){
   body {
     background-image: $tm-body-background;
+  }
+  h1 {
+    font-weight: 800;
   }
     .tm-text-xsmall {
         font-size: $tm-xsmall-font-size;
@@ -615,27 +644,27 @@
     font-family: $base-heading-font-family;
     font-weight: 800;
 }
-@mixin hook-article(){
-    p {
-        line-height: 2.1;
-    }
-}
-@mixin hook-article-title(){
-    font-weight: 400;
-    letter-spacing: 0;
-    margin-right: 30px;
-    .tm-totop {
-        margin-right: -30px;
-    }
-}
+// @mixin hook-article(){
+//     p {
+//         line-height: 2.1;
+//     }
+// }
+// @mixin hook-article-title(){
+//     font-weight: 400;
+//     letter-spacing: 0;
+//     margin-right: 30px;
+//     .tm-totop {
+//         margin-right: -30px;
+//     }
+// }
 
 // @mixin hook-navbar-container(){
 //     border-bottom: 1px solid lighten($tm-primary-color, 4%);
 // }
 @mixin hook-list-misc(){
-    #markdown-toc {
-        font-size: 1.2rem
-    }
+    // #markdown-toc {
+    //     font-size: 20px; //1.2rem
+    // }
     .uk-list-medium > li:nth-child(n+2),
     .uk-list-medium > li > ul { margin-top: $list-margin-top * 1.5; }
 }
@@ -653,10 +682,10 @@
             text-decoration: none;
             // background: $tm-primary-color-xdark;
         }
-        p{
-            font-size: 1.1rem;
-            font-weight: 300;
-        }
+        // p{
+        //     font-size: 1.1rem;
+        //     font-weight: 300;
+        // }
     }
 
     .uk-icon-forder {
@@ -770,9 +799,6 @@
         font-weight: 300;
         font-size: 1.2rem;
     }
-    .tm-margin-large-top {
-        margin-top: 100px;
-    }
     body {
       //filter: blur(7px);
     }
@@ -783,6 +809,9 @@
 /* ========================================================================
    Component: Responsive
  ========================================================================== */
+ .tm-margin-large-top {
+     margin-top: 50px;
+ }
 
 @media (min-width: $breakpoint-small) {
     .tm-form-contact {
@@ -809,9 +838,9 @@
 }
 
 @media (min-width: $breakpoint-medium) {
-    .tm-faq .uk-heading-hero {
-      line-height: 1.2;
-    }
+  .tm-margin-large-top {
+      margin-top: 100px;
+  }
     .tm-faq .uk-article {
         position: relative;
         margin-left: 160px;
@@ -824,9 +853,12 @@
             position: absolute;
             top: -0;
             left: -160px;
-            color: $inverse-global-muted-color;
+            color: rgba($inverse-global-color, 0.6);
             z-index: 1;
             content: "Q";
+            -webkit-font-smoothing: antialiased;
+            -moz-osx-font-smoothing: grayscale;
+            text-rendering: optimizeLegibility;
         }
     }
     .tm-timeline {
