--- a/_sass/theme/variables.scss
+++ b/_sass/theme/variables.scss
@@ -21,11 +21,11 @@
 // $global-link-color: $global-muted-color;
 // $global-link-hover-color: $color-hover;
 //
-// $global-xxlarge-font-size: 1.875rem;;
-// $global-xlarge-font-size: 1.625rem;
-// $global-large-font-size: 1.375rem;
-// $global-medium-font-size: 1.125rem;
-// $global-small-font-size: 0.875rem;
+$global-xxlarge-font-size: 2.6111rem;
+$global-xlarge-font-size: 2.222rem;
+$global-large-font-size: 1.778rem;
+$global-medium-font-size: 1.333rem;
+$global-small-font-size: 0.8889rem;
 //
 // // Base
 // $base-heading-color: $color-main;
@@ -38,12 +38,8 @@
 // // $base-body-font-weight: 300;
 // $base-h2-line-height: 1.4;
 // $base-link-hover-text-decoration: underline;
-// // $base-h1-font-size:                              $global-xxlarge-font-size !default;
-// // $base-h2-font-size:                              $global-xlarge-font-size !default;
-// // $base-h3-font-size:                              $global-large-font-size !default;
-// // $base-h4-font-size:                              $global-medium-font-size !default;
-// // $base-h5-font-size:                              $global-font-size !default;
-// // $base-h6-font-size:                              $global-small-font-size !default;
+// $base-h5-font-size:                              $global-font-size !default;
+// $base-h6-font-size:                              $global-small-font-size !default;
 //
 // // Navbar
 // $navbar-background: #fff;
@@ -75,12 +71,12 @@ $container-small-max-width: 800px;
 // $offcanvas-bar-color-mode: dark;
 // $offcanvas-bar-background: #fff;
 //
-// $heading-hero-font-size: 2.375rem;
-// $heading-hero-line-height: 1.3;
-// $heading-hero-font-size-s: 2.9375rem;
-// $heading-hero-line-height-s: 1.3;
-// $heading-hero-font-size-m: 3.625rem;
-// $heading-hero-line-height-m: 1.4;
+$heading-hero-font-size: 2.222rem;
+$heading-hero-line-height: 1.2;
+$heading-hero-font-size-s: 3.667rem;
+$heading-hero-line-height-s: 1.2;
+$heading-hero-font-size-m: 4.6111rem;
+$heading-hero-line-height-m: 1.2;
 //
 // $navbar-nav-item-text-transform: none;
 //
@@ -92,7 +88,7 @@ $tm-xsmall-font-size: 0.7rem;
 $tm-primary-color: #0089ff; //#007eff; //#6713d2; //#007eff;
 $tm-body-background: linear-gradient(to top, #0065fd 0%, #0089ff 100%); //linear-gradient(to top, #3300fd 0%, #007eff 100%); //linear-gradient(to top, #cc208e 0%, #6713d2 100%);; //linear-gradient(to top, #3300fd 0%, #007eff 100%);
 $tm-primary-color-dark: rgba(0, 0, 0, 0.2); //#0404042b; //darken($tm-primary-color, 7%);
-// $tm-primary-color-xdark: darken($tm-primary-color, 14%);
+$tm-primary-color-xdark: rgba(0, 0, 0, 0.3);
 $tm-primary-color-light: rgba(255, 255, 255, 0.1); //#ffffff21; //lighten($tm-primary-color, 7%);
 $base-body-background: $tm-primary-color;
 //$tm-inverse-color-light: rgba(255, 255, 255, 0.8);
@@ -105,18 +101,18 @@ $tm-timeline-color: $tm-primary-color;
 $global-font-family: 'Work Sans', sans-serif;
 $global-font-size: 18px;
 $base-heading-font-family: 'Nunito Sans', sans-serif;
-$heading-hero-font-size: 3rem;
-$heading-hero-font-size-s: 4rem;
-$heading-hero-font-size-m: 4.6rem;
-$global-xxlarge-font-size: 3.6rem;
-$global-xlarge-font-size: 2.6rem;
+// $heading-hero-font-size: 3rem;
+// $heading-hero-font-size-s: 4rem;
+// $heading-hero-font-size-m: 4.6rem;
+// $global-xxlarge-font-size: 3.6rem;
+// $global-xlarge-font-size: 2.6rem;
 $base-body-font-weight: 200;
 $global-primary-background: $tm-primary-color;
 $global-link-color: $tm-primary-color;
 $navbar-background: $tm-primary-color;
 $inverse-global-color: #fff;
 $inverse-global-muted-color: rgba($inverse-global-color, 0.8);
-$base-heading-font-weight: 800;
+$base-heading-font-weight: 200;
 $base-link-hover-text-decoration: none;
 $subnav-item-text-transform: none;
 $progress-background: $tm-primary-color-dark;
@@ -141,8 +137,9 @@ $inverse-navbar-toggle-hover-color: $global-inverse-color;
 // $offcanvas-bar-background: $tm-primary-color-xdark;
 $navbar-nav-item-text-transform: none;
 $button-default-background: $background-default-background;
-$article-title-font-size: 2.2rem;
 
+$article-title-font-size: $global-xxlarge-font-size;
+$article-title-line-height: 1.1;
 // Added
 $search-navbar-font-size: 1.0625rem; //$global-font-size;
 $inverse-search-navbar-background: $tm-primary-color-dark;
@@ -151,10 +148,10 @@ $inverse-search-navbar-background: $tm-primary-color-dark;
 // $base-code-font-size: $global-small-font-size !default;
 // $base-code-font-family: Consolas, monaco, monospace !default;
 // $base-code-color: green; //$global-danger-background !default;
-$base-pre-color: $inverse-global-color;
+$base-pre-color: $inverse-global-muted-color;
 $base-pre-font-size: 15px;
 $base-pre-line-height: 1.5;
-$inverse-base-code-color: $inverse-global-color;
+$inverse-base-code-color: $inverse-global-muted-color;
 //$animation-fade-duration: 1s;
 $card-primary-background: rgba(255, 255, 255, 0.03);
 $card-primary-box-shadow: 0 9px 20px rgba(0,0,0,0.16);
