faq content done

--- a/_layouts/changelog.html
+++ b/_layouts/changelog.html
@@ -21,7 +21,7 @@ layout: default
                     </div>
                     <div class="tm-timeline-body">
                         <h3>{{ version.title }} <span class="uk-label">{{ version.label }}</span></h3>
-                        <ul class="uk-list">
+                        <ul class="uk-list text-light">
                             {% for item in version.list %}
                             <li>{{ item }}</li>
                             {% endfor %}
