--- a/_sass/theme/mixins.scss
+++ b/_sass/theme/mixins.scss
@@ -6,8 +6,17 @@
   }
 }
 
+.article-content, .tm-timeline-body {
+  a {
+    border-bottom: solid 1px $inverse-global-muted-color;
+    &:hover {
+      background: $tm-primary-color-light;
+      border-color: $tm-primary-color-light;
+    }
+  }
+}
+
 .article-content {
-  .share {}
   figure, .uk-slideshow {
     margin-top: $global-medium-margin * 1.1;
     margin-bottom: $global-medium-margin * 1.5;
@@ -45,10 +54,19 @@
   }
 }
 
+.share a {
+  border: none;
+  &:hover {
+    background: none;
+    border: none;
+  }
+}
+
 #markdown-toc {
   padding: 0;
   list-style: none;
   margin: 0 0 $global-xlarge-margin 0;
+  font-size: 1.111rem;
   >li {
     margin-top: $list-large-margin-top / 2;
   }
@@ -68,9 +86,12 @@
     transition-duration: 0.3s;
     -webkit-transition-property: transform;
     transition-property: transform;
+    border: none;
     &:active, &:hover {
       -webkit-transform: translateX(6px);
       transform: translateX(6px);
+      background: none;
+      border: none;
     }
   }
 }
