--- a/_sass/theme/mixins.scss
+++ b/_sass/theme/mixins.scss
@@ -124,6 +124,17 @@
   }
   >h2 {
     margin-bottom: $global-medium-margin;
+    &::before {
+        display: block;
+        content: " ";
+        height: 120px;
+        margin-top: -120px;
+        visibility: hidden;
+    }
+    &:focus{
+      outline: none;
+}
+
   }
 }
 
